docs/envoy/v1.7.0/_sources/api-v2/admin/v2alpha/config_dump.proto.rst.txt
.. _envoy_api_file_envoy/admin/v2alpha/config_dump.proto:

ConfigDump
==========


.. _envoy_api_msg_admin.v2alpha.ConfigDump:

admin.v2alpha.ConfigDump
------------------------

`[admin.v2alpha.ConfigDump proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/admin/v2alpha/config_dump.proto#L17>`_

The :ref:`/config_dump <operations_admin_interface_config_dump>` admin endpoint uses this wrapper
message to maintain and serve arbitrary configuration information from any component in Envoy.

.. code-block:: json

  {
    "configs": "{...}"
  }

.. _envoy_api_field_admin.v2alpha.ConfigDump.configs:

configs
  (map<`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, `Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_>) This map is serialized and dumped in its entirety at the
  :ref:`/config_dump <operations_admin_interface_config_dump>` endpoint.
  
  Keys are a short descriptor of the config object they map to. The following keys (and the
  messages they map to) are currently supported:
  
  * *bootstrap*: :ref:`BootstrapConfigDump <envoy_api_msg_admin.v2alpha.BootstrapConfigDump>`
  * *listeners*: :ref:`ListenersConfigDump <envoy_api_msg_admin.v2alpha.ListenersConfigDump>`
  * *clusters*: :ref:`ClustersConfigDump <envoy_api_msg_admin.v2alpha.ClustersConfigDump>`
  * *routes*:  :ref:`RoutesConfigDump <envoy_api_msg_admin.v2alpha.RoutesConfigDump>`
  
  


.. _envoy_api_msg_admin.v2alpha.BootstrapConfigDump:

admin.v2alpha.BootstrapConfigDump
---------------------------------

`[admin.v2alpha.BootstrapConfigDump proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/admin/v2alpha/config_dump.proto#L35>`_

This message describes the bootstrap configuration that Envoy was started with. This includes
any CLI overrides that were merged. Bootstrap configuration information can be used to recreate
the static portions of an Envoy configuration by reusing the output as the bootstrap
configuration for another Envoy.

.. code-block:: json

  {
    "bootstrap": "{...}"
  }

.. _envoy_api_field_admin.v2alpha.BootstrapConfigDump.bootstrap:

bootstrap
  (:ref:`config.bootstrap.v2.Bootstrap <envoy_api_msg_config.bootstrap.v2.Bootstrap>`) 
  


.. _envoy_api_msg_admin.v2alpha.ListenersConfigDump:

admin.v2alpha.ListenersConfigDump
---------------------------------

`[admin.v2alpha.ListenersConfigDump proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/admin/v2alpha/config_dump.proto#L42>`_

Envoy's listener manager fills this message with all currently known listeners. Listener
configuration information can be used to recreate an Envoy configuration by populating all
listeners as static listeners or by returning them in a LDS response.

.. code-block:: json

  {
    "version_info": "...",
    "static_listeners": [],
    "dynamic_active_listeners": [],
    "dynamic_warming_listeners": [],
    "dynamic_draining_listeners": []
  }

.. _envoy_api_field_admin.v2alpha.ListenersConfigDump.version_info:

version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is the :ref:`version_info <envoy_api_field_DiscoveryResponse.version_info>` in the
  last processed LDS discovery response. If there are only static bootstrap listeners, this field
  will be "".
  
  
.. _envoy_api_field_admin.v2alpha.ListenersConfigDump.static_listeners:

static_listeners
  (:ref:`Listener <envoy_api_msg_Listener>`) The statically loaded listener configs.
  
  
.. _envoy_api_field_admin.v2alpha.ListenersConfigDump.dynamic_active_listeners:

dynamic_active_listeners
  (:ref:`admin.v2alpha.ListenersConfigDump.DynamicListener <envoy_api_msg_admin.v2alpha.ListenersConfigDump.DynamicListener>`) The dynamically loaded active listeners. These are listeners that are available to service
  data plane traffic.
  
  
.. _envoy_api_field_admin.v2alpha.ListenersConfigDump.dynamic_warming_listeners:

dynamic_warming_listeners
  (:ref:`admin.v2alpha.ListenersConfigDump.DynamicListener <envoy_api_msg_admin.v2alpha.ListenersConfigDump.DynamicListener>`) The dynamically loaded warming listeners. These are listeners that are currently undergoing
  warming in preparation to service data plane traffic. Note that if attempting to recreate an
  Envoy configuration from a configuration dump, the warming listeners should generally be
  discarded.
  
  
.. _envoy_api_field_admin.v2alpha.ListenersConfigDump.dynamic_draining_listeners:

dynamic_draining_listeners
  (:ref:`admin.v2alpha.ListenersConfigDump.DynamicListener <envoy_api_msg_admin.v2alpha.ListenersConfigDump.DynamicListener>`) The dynamically loaded draining listeners. These are listeners that are currently undergoing
  draining in preparation to stop servicing data plane traffic. Note that if attempting to
  recreate an Envoy configuration from a configuration dump, the draining listeners should
  generally be discarded.
  
  
.. _envoy_api_msg_admin.v2alpha.ListenersConfigDump.DynamicListener:

admin.v2alpha.ListenersConfigDump.DynamicListener
-------------------------------------------------

`[admin.v2alpha.ListenersConfigDump.DynamicListener proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/admin/v2alpha/config_dump.proto#L49>`_

Describes a dynamically loaded cluster via the LDS API.

.. code-block:: json

  {
    "version_info": "...",
    "listener": "{...}"
  }

.. _envoy_api_field_admin.v2alpha.ListenersConfigDump.DynamicListener.version_info:

version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is the per-resource version information. This version is currently taken from the
  :ref:`version_info <envoy_api_field_DiscoveryResponse.version_info>` field at the time
  that the listener was loaded. In the future, discrete per-listener versions may be supported
  by the API.
  
  
.. _envoy_api_field_admin.v2alpha.ListenersConfigDump.DynamicListener.listener:

listener
  (:ref:`Listener <envoy_api_msg_Listener>`) The listener config.
  
  



.. _envoy_api_msg_admin.v2alpha.ClustersConfigDump:

admin.v2alpha.ClustersConfigDump
--------------------------------

`[admin.v2alpha.ClustersConfigDump proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/admin/v2alpha/config_dump.proto#L83>`_

Envoy's cluster manager fills this message with all currently known clusters. Cluster
configuration information can be used to recreate an Envoy configuration by populating all
clusters as static clusters or by returning them in a CDS response.

.. code-block:: json

  {
    "version_info": "...",
    "static_clusters": [],
    "dynamic_active_clusters": [],
    "dynamic_warming_clusters": []
  }

.. _envoy_api_field_admin.v2alpha.ClustersConfigDump.version_info:

version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is the :ref:`version_info <envoy_api_field_DiscoveryResponse.version_info>` in the
  last processed CDS discovery response. If there are only static bootstrap clusters, this field
  will be "".
  
  
.. _envoy_api_field_admin.v2alpha.ClustersConfigDump.static_clusters:

static_clusters
  (:ref:`Cluster <envoy_api_msg_Cluster>`) The statically loaded cluster configs.
  
  
.. _envoy_api_field_admin.v2alpha.ClustersConfigDump.dynamic_active_clusters:

dynamic_active_clusters
  (:ref:`admin.v2alpha.ClustersConfigDump.DynamicCluster <envoy_api_msg_admin.v2alpha.ClustersConfigDump.DynamicCluster>`) The dynamically loaded active clusters. These are clusters that are available to service
  data plane traffic.
  
  
.. _envoy_api_field_admin.v2alpha.ClustersConfigDump.dynamic_warming_clusters:

dynamic_warming_clusters
  (:ref:`admin.v2alpha.ClustersConfigDump.DynamicCluster <envoy_api_msg_admin.v2alpha.ClustersConfigDump.DynamicCluster>`) The dynamically loaded warming clusters. These are clusters that are currently undergoing
  warming in preparation to service data plane traffic. Note that if attempting to recreate an
  Envoy configuration from a configuration dump, the warming clusters should generally be
  discarded.
  
  
.. _envoy_api_msg_admin.v2alpha.ClustersConfigDump.DynamicCluster:

admin.v2alpha.ClustersConfigDump.DynamicCluster
-----------------------------------------------

`[admin.v2alpha.ClustersConfigDump.DynamicCluster proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/admin/v2alpha/config_dump.proto#L90>`_

Describes a dynamically loaded cluster via the CDS API.

.. code-block:: json

  {
    "version_info": "...",
    "cluster": "{...}"
  }

.. _envoy_api_field_admin.v2alpha.ClustersConfigDump.DynamicCluster.version_info:

version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is the per-resource version information. This version is currently taken from the
  :ref:`version_info <envoy_api_field_DiscoveryResponse.version_info>` field at the time
  that the cluster was loaded. In the future, discrete per-cluster versions may be supported by
  the API.
  
  
.. _envoy_api_field_admin.v2alpha.ClustersConfigDump.DynamicCluster.cluster:

cluster
  (:ref:`Cluster <envoy_api_msg_Cluster>`) The cluster config.
  
  



.. _envoy_api_msg_admin.v2alpha.RoutesConfigDump:

admin.v2alpha.RoutesConfigDump
------------------------------

`[admin.v2alpha.RoutesConfigDump proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/admin/v2alpha/config_dump.proto#L120>`_

Envoy's RDS implementation fills this message with all currently loaded routes, as described by
their RouteConfiguration objects. Static routes configured in the bootstrap configuration are
separated from those configured dynamically via RDS. Route configuration information can be used
to recreate an Envoy configuration by populating all routes as static routes or by returning them
in RDS responses.

.. code-block:: json

  {
    "static_route_configs": [],
    "dynamic_route_configs": []
  }

.. _envoy_api_field_admin.v2alpha.RoutesConfigDump.static_route_configs:

static_route_configs
  (:ref:`RouteConfiguration <envoy_api_msg_RouteConfiguration>`) The statically loaded route configs.
  
  
.. _envoy_api_field_admin.v2alpha.RoutesConfigDump.dynamic_route_configs:

dynamic_route_configs
  (:ref:`admin.v2alpha.RoutesConfigDump.DynamicRouteConfig <envoy_api_msg_admin.v2alpha.RoutesConfigDump.DynamicRouteConfig>`) The dynamically loaded route configs.
  
  
.. _envoy_api_msg_admin.v2alpha.RoutesConfigDump.DynamicRouteConfig:

admin.v2alpha.RoutesConfigDump.DynamicRouteConfig
-------------------------------------------------

`[admin.v2alpha.RoutesConfigDump.DynamicRouteConfig proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/admin/v2alpha/config_dump.proto#L121>`_


.. code-block:: json

  {
    "version_info": "...",
    "route_config": "{...}"
  }

.. _envoy_api_field_admin.v2alpha.RoutesConfigDump.DynamicRouteConfig.version_info:

version_info
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is the per-resource version information. This version is currently taken from the
  :ref:`version_info <envoy_api_field_DiscoveryResponse.version_info>` field at the time that
  the route configuration was loaded.
  
  
.. _envoy_api_field_admin.v2alpha.RoutesConfigDump.DynamicRouteConfig.route_config:

route_config
  (:ref:`RouteConfiguration <envoy_api_msg_RouteConfiguration>`) The route config.
  
  


